# genai-hack-backend

./: .gcloudignore  .gitignore  500_ERROR_FIXES_SUMMARY.md  AUTH_GOOGLE_SIGNIN_SETUP.md  CHIRP3_HD_VOICES.md  DEPLOYMENT_CHECKLIST.md  DHYAAN_IAM_SIGNED_URL_IMPLEMENTATION.md  Dockerfile  FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MAJOR_FIXES_SUMMARY.md  README.md  SETUP.md  STORYTELLING_IMPROVEMENTS_SUMMARY.md  STUDIO_GHIBLI_FIXES_COMPLETE.md  ULTRA_GENDER_CONSISTENCY_FIX_COMPLETE.md  VOICE_AGENT_README.md  VoiceService.tsx  app.db  app.yaml  calmira.db  cloudrun-service.yaml  debug_auth_flow.py  debug_character_data.py  debug_fixed_prompt.py  debug_music_urls.py  debug_panel2_tts.py  debug_prompt_construction.py  debug_raw_llm.py  debug_story_dialogue.py  debug_story_generation.py  deploy-cloudrun.ps1  deploy-cloudrun.sh  main.py  nano_test_results.txt  package-lock.json  pyproject.toml  quick_voice_test.py  requirements.txt  setup-iam-signing.ps1  (+40 more)
config/: meditation_music_metadata.json  settings.py
debug/: debug_dialogue_parser.py  test_final_assembly_node.py
models/: __init__.py  db.py  dhyaan.py  manga.py  schemas.py  user.py  voice.py
routers/: auth_router.py  auth_router_minimal.py  auth_router_simple.py  auth_router_working.py  dashboard_router.py  dhyaan_router.py  manga_router.py  voice_agent_router.py
scripts/: dev_seed_demo.py
services/: chirp3hd_audio_service.py  chirp3hd_tts_service.py  dhyaan_service.py  dialogue_extractor.py  gcs_storage_service.py  image_service.py  nano_banana_service.py  panel_processor.py  sequential_story_service.py  story_service.py  streaming_parser.py  voice_agent_service.py  voice_agent_service_backup.py
utils/: auth.py  helpers.py  retry_helpers.py
venv_gemini/Scripts/: activate  activate.bat
workflows/: manga_workflow.py  nano_banana_workflow_node.py
